tests/valid/64854_is_pair/is_pair.agu
-- Author: 64854, Diogo Almeida

let isPair (x) : Int -> Bool =
    if x % 2 == 0 then true else false

let _ : Unit =
    print(isPair(4))