tests/invalid-syntax/58235_int_as_bool/int_as_bool.agu
-- Author: 58235, António Almeida
-- Int cannot be converted to Bool

let _ : Unit = 
    let x : Int = 1;
    if x then print(true) else print(false)